--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
         "illuminate/html": "~5.0",
-        "yajra/laravel-datatables-oracle": "^6.10"
+        "yajra/laravel-datatables-oracle": "^6.10",
+        "intervention/image": "~2.0."
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
