--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.2.*",
         "illuminate/html": "~5.0",
         "yajra/laravel-datatables-oracle": "^6.10",
-        "intervention/image": "~2.0."
+        "intervention/image": "~2.0.",
+        "barryvdh/laravel-dompdf": "0.6.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
